# routes/api.php
@@ -1,6 +1,6 @@
 <?php
 
-use Illuminate\Http\Request;
+use App\Http\Controllers\ApplicationController;
 use Illuminate\Support\Facades\Route;
 
 /*
@@ -14,6 +14,6 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
-Route::middleware('auth:api')->get('/user', function (Request $request) {
-    return $request->user();
+Route::/*middleware(['auth:sanctum'])->*/prefix('v1/application')->name('api.')->group(function () {
+    Route::get('/', [ApplicationController::class, 'all'])->name('application');
 });
